# cedar-spec

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  build-wasm-all.sh  build.sh  final_corpuses.tar.tar  lean-toolchain  rcfile
.github/: dependabot.yml
cedar-benchmarking/: Cargo.toml  README.md
cedar-benchmarking/corpus/: tasks.json
cedar-benchmarking/corpus/clauses/: policies_10KB.cedar  policies_1KB.cedar
cedar-benchmarking/corpus/tinytodo/: tinytodo.cedarschema
cedar-benchmarking/src/: executor.rs  main.rs  output.rs  request.rs  tasks.rs
cedar-cli/: Cargo.toml  README.md  build.rs  build_lean_lib.sh
cedar-cli/protobuf_schema/: Messages.proto
cedar-cli/src/: analysis.rs  cli_enums.rs  cli_exec.rs  err.rs  evaluation.rs  lean_ffi.rs  lib.rs  main.rs  messages.rs  symcc.rs  util.rs  validation.rs
cedar-drt/: Cargo.toml  Makefile  README.md  build.rs  build_lean_lib.sh  crash-e6e2b1c79f1e84c8476e9e8e2510636004d89e12  create_corpus.sh  dry_run_fuzz_targets.sh  entity-validation-test.txt  fuzz_manager.py  initialize_corpus.sh  lakefile.lean  lean-toolchain  request-validation-test.txt  rust-toolchain.toml  set_env_vars.sh  synthesize_tests.sh  test.cedar  test.txt
cedar-drt/cedar-afl/: Cargo.toml  run_afl.sh
cedar-drt/cedar-bolero/: Cargo.toml  create_checkpoints.sh  run_bolero.sh  run_experiment_checkpoints.py  run_libfuzzer_checkpoints.sh
cedar-drt/cedar-bolero/src/: dump.rs  lib.rs  parsing_utils.rs  prt.rs  schemas.rs
cedar-drt/cedar-bolero/tests/: abac_type_directed.rs  convert_policy_json_to_cedar.rs  eval_type_directed.rs  validation_type_directed.rs
cedar-drt/fuzz/: Cargo.toml  build.rs  log  output
cedar-drt/fuzz/fuzz_targets/: abac-lean.rs  abac-type-directed-lean.rs  abac-type-directed.rs  abac.rs  abac_shared.rs  abac_type_directed_shared.rs  batched-evaluation-drt.rs  batched-evaluation-pbt.rs  common-type-resolution.rs  convert-policy-cedar-to-json.rs  convert-policy-json-to-cedar.rs  convert-schema-cedar-to-json.rs  convert-schema-human-to-json.rs  convert-schema-json-to-cedar.rs  convert-schema-json-to-human.rs  cst-est-ast-pbt.rs  custom-schema-round-trip.rs  datetime-parser-drt.rs  decimal-parser-drt.rs  duration-parser-drt.rs  entity-slicing-drt-type-directed.rs  entity-validation.rs  eval-type-directed-lean.rs  eval-type-directed.rs  eval_type_directed_shared.rs  formatter-bytes.rs  formatter.rs  human-schema-roundtrip.rs  human-schemas-roundtrip.rs  input-generation.rs  ip-parser-drt.rs  json-schema-roundtrip.rs  json-then-human-schema-roundtrip.rs  level-validation-drt.rs  partial-auth.rs  partial-eval.rs  policy-set-roundtrip.rs  pp.rs  protobuf-roundtrip.rs  pst-ast-roundtrip.rs  (+63 more)
cedar-drt/fuzz/src/: abac.rs  abac_type_directed.rs  collections.rs  dump.rs  err.rs  gen.rs  lib.rs  parsing_utils.rs  policy_equiv.rs  props.rs  proto_gen.rs  prt.rs  pst_equiv.rs  pst_gen.rs  rbac.rs  roundtrip_entities.rs  schema.rs  schemas.rs  symcc.rs  tpe.rs  validation_drt.rs
cedar-drt/protobuf_schema/: Messages.proto
cedar-drt/schema/: AuthorizationRequest.proto
cedar-drt/src/: analytics.rs  cedar_test_impl.rs  dafny_java_impl.rs  definitional_request_types.rs  dump.rs  lean_engine.rs  lean_impl.rs  lib.rs  logger.rs  parsing_utils.rs  prt.rs  tests.rs  utils.rs
cedar-drt/tests/: benchmark.rs  integration_tests.rs  integration_tests_on_def_impl.rs
cedar-lean-cli/: Cargo.toml  Dockerfile  README.md
cedar-lean-cli/src/: analysis.rs  cli_enums.rs  cli_exec.rs  err.rs  evaluation.rs  lib.rs  main.rs  symcc.rs  util.rs
cedar-lean-cli/tests/: integration_tests.rs
cedar-lean-cli/tests/snapshots/: integration_tests__analyze_compare_tabular_arithmetic_1_cmp_2.snap  integration_tests__analyze_compare_tabular_arithmetic_3_cmp_4.snap  integration_tests__analyze_compare_tabular_arithmetic_3_cmp_5.snap  integration_tests__analyze_compare_tabular_arithmetic_4_cmp_5.snap  integration_tests__analyze_compare_tabular_arithmetic_6_cmp_8.snap  integration_tests__analyze_compare_tabular_arithmetic_7_cmp_10.snap  integration_tests__analyze_compare_tabular_arithmetic_7_cmp_9.snap  integration_tests__analyze_compare_tabular_demo_2_1.snap  integration_tests__analyze_compare_tabular_demo_3_2.snap  integration_tests__analyze_compare_tabular_demo_4_3.snap  integration_tests__analyze_compare_tabular_globs_a_a_star_cmp_a_star_non_a.snap  integration_tests__analyze_compare_tabular_globs_a_cmp_star_other.snap  integration_tests__analyze_compare_tabular_globs_a_star_cmp_a_a_star.snap  integration_tests__analyze_compare_tabular_globs_a_star_cmp_a_star_non_a.snap  integration_tests__analyze_compare_tabular_globs_a_star_cmp_a_star_star.snap  integration_tests__analyze_compare_tabular_globs_a_star_star_a.snap  integration_tests__analyze_compare_tabular_globs_star_a_cmp_star_b.snap  integration_tests__analyze_compare_tabular_misc1.snap  integration_tests__analyze_compare_tabular_sets1.snap  integration_tests__analyze_compare_tabular_sets2.snap  integration_tests__analyze_compare_tabular_sets3.snap  integration_tests__analyze_compare_tabular_sets4.snap  integration_tests__analyze_compare_tabular_sets5a.snap  integration_tests__analyze_compare_tabular_sets5b.snap  integration_tests__analyze_compare_tabular_sets5c.snap  (+21 more)
cedar-lean-ffi/: Cargo.toml  README.md  build.rs  build_lean_lib.sh  set_env_vars.sh
cedar-lean-ffi/protobuf_schema/: Messages.proto
cedar-lean-ffi/src/: datatypes.rs  err.rs  lean_ffi.rs  lean_object.rs  lib.rs  messages.rs
cedar-lean-ffi/tests/: integration_tests.rs
cedar-policy-generators/: .gitignore  Cargo.toml  README.md  REAME.md
cedar-policy-generators/src/: abac.rs  collections.rs  err.rs  expr.rs  expr_strict.expr  gen.rs  hierarchy.rs  lib.rs  main.rs  policy.rs  policy_grammar.rs  policy_set.rs  pst.rs  rbac.rs  request.rs  schema.rs  schema_gen.rs  schema_grammar.rs  settings.rs  size_hint_utils.rs  types.rs
cedar-wasm/: Cargo.toml  cvc5.js
cedar-wasm/src/: lib.rs  web_analysis.rs  web_cli_enums.rs  web_cli_exec.rs  web_err.rs  web_symcc.rs  web_util.rs
(+970 files in other folders)
