[package]
name = "cedar-benchmarking"
version = "4.11.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://cedarpolicy.com"
repository = "https://github.com/cedar-policy/cedar-spec"
keywords = ["cedar", "authorization", "benchmark", "performance"]
categories = ["command-line-utilities", "development-tools::profiling"]
description = "Benchmarking tool for the Cedar policy language"
publish = false

[[bin]]
name = "cedar-benchmarking"
path = "src/main.rs"

[dependencies]
arbitrary = "1.4"
cedar-policy = { version = "=4.11.0", path = "../cedar/cedar-policy", features = ["protobufs"] }
cedar-policy-core = { version = "=4.11.0", path = "../cedar/cedar-policy-core" }
cedar-policy-generators = { version = "4", path = "../cedar-policy-generators", features = ["cedar-policy"] }
clap = { version = "4", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
