[package]
name = "cedar-cli"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
cedar-policy = { path="../cedar/cedar-policy/", version = "=4.4.0", features = ["protobufs", "permissive-validate"] }
clap = { version = "4.5.36", features = ["derive"] }
lean-sys = { version = "0.0.8", default-features = false }
serde = "1"
serde_json = "1.0"
thiserror = "2.0"
prost = "0.13"
itertools = "0.14.0"
miette = "7.6.0"
prettytable-rs = "0.10"

[build-dependencies]
prost-build = "0.13"

[profile.release]
