[package]
name = "cedar-drt"
edition = "2021"
version = "4.0.0"
publish = false

[dependencies]
env_logger = "0.11"
log = "0.4"
cedar-policy = { path = "../cedar/cedar-policy", version = "4.*", features = ["protobufs"] }
cedar-policy-core = { path = "../cedar/cedar-policy-core", version = "4.*", features = ["arbitrary"] }
cedar-policy-formatter = { path = "../cedar/cedar-policy-formatter", version = "4.*" }
cedar-testing = { path = "../cedar/cedar-testing", version = "4.*" }
lean-sys = { version = "0.0.8", default-features = false }
miette = "7.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
smol_str = { version = "0.3", features = ["serde"] }
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

[features]
integration-testing = []

[dev-dependencies]
walkdir = "2.4"
statrs = "0.18"

[dependencies.uuid]
version = "1.3.1"
features = ["v4", "fast-rng"]

[profile.release]
overflow-checks = true
