[package]
name = "cedar-drt"
edition = "2021"
version = "4.4.0"
publish = false

[dependencies]
libfuzzer-sys = "0.4"
cedar-lean-ffi = { path = "../cedar-lean-ffi", version = "4.4.0" }
cedar-policy = "4.4.0"
cedar-policy-core = { version = "4.4.0", features = ["arbitrary", "entity-manifest"] }
cedar-policy-formatter = "4.4.0"
cedar-testing = { path = "../cedar/cedar-testing", version = "4.4.0" }
cedar-policy-generators = { path = "../cedar-policy-generators", version = "4.0.0", features = ["cedar-policy"] }
env_logger = "0.11"
log = "0.4"
miette = "7.1.0"
serde_json = "1.0.140"
similar-asserts = "1.5.0"
smol_str = { version = "0.3", features = ["serde"] }

[profile.release]
overflow-checks = true

[patch.crates-io]
cedar-policy = { path = "../cedar/cedar-policy" }
cedar-policy-core = { path = "../cedar/cedar-policy-core" }
cedar-policy-formatter = { path = "../cedar/cedar-policy-formatter" }