[package]
name = "cedar-lean-cli"
edition = "2021"
version = "4.4.0"
publish = false

[dependencies]
cedar-policy = { version = "4.4.0", features = ["protobufs"] }
cedar-lean-ffi = { path = "../cedar-lean-ffi", version ="4.4.0" }
clap = { version = "4.5.36", features = ["derive"] }
serde = "1"
serde_json = "1.0"
thiserror = "2.0"
itertools = "0.14.0"
miette = "7.6.0"
prettytable-rs = "0.10"

[profile.release]

[patch.crates-io]
cedar-policy = { path = "../cedar/cedar-policy" }
