[package]
name = "cedar-lean-cli"
edition = "2024"
version = "4.4.0"
publish = false

[dependencies]
cedar-policy = { version = "*", path = "../cedar/cedar-policy" }
cedar-lean-ffi = { version = "*", path = "../cedar-lean-ffi" }
clap = { version = "4.5.36", features = ["derive"] }
serde = "1"
serde_json = "1.0"
thiserror = "2.0"
itertools = "0.14.0"
miette = "7.6.0"
prettytable-rs = "0.10"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.46"

# https://insta.rs/docs/quickstart/ recommends compiling `insta` and `similar` in release mode
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
