[package]
name = "cedar-policy-generators"
edition = "2021"
version = "4.0.0"
publish = false

[dependencies]
arbitrary = "1.3"
cedar-policy-core = { version = "4.2", features = ["arbitrary"] }
cedar-policy-validator = { version = "4.2", features = ["arbitrary"] }
clap = { version = "4.3.16", features = ["derive"] }
highway = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smol_str = { version = "0.3", features = ["serde", "arbitrary"] }
rand = "0.8.5"
anyhow = "1.0.72"
nanoid = "0.4.0"
serde_with = "3.4.0"
thiserror = "1.0"
