[package]
name = "cedar-policy-generators"
edition = "2021"
version = "4.0.0"
publish = false

[dependencies]
arbitrary = "1.4"
cedar-policy-core = { path = "../cedar/cedar-policy-core", version = "4.*", features = ["arbitrary", "datetime"] }
cedar-policy-validator = { path = "../cedar/cedar-policy-validator", version = "4.*", features = ["arbitrary", "datetime"] }
clap = { version = "4.3.16", features = ["derive"] }
highway = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smol_str = { version = "0.3", features = ["serde", "arbitrary"] }
rand = "0.8.5"
anyhow = "1.0.72"
serde_with = "3.4.0"
thiserror = "2.0"
nonempty = { version = "0.10", features = ["arbitrary"] }

[dev.dependencies]
rand = "0.8.5"
