[package]
name = "cedar-policy-generators"
edition = "2021"
version = "4.0.0"
publish = false

[dependencies]
arbitrary = "1.4"
cedar-policy-core = { path = "../cedar/cedar-policy-core", version = "4.*", features = ["arbitrary"] }
cedar-policy = { path = "../cedar/cedar-policy", version = "4.*", optional = true }
clap = { version = "4.3.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smol_str = { version = "0.3", features = ["serde", "arbitrary"] }
rand = "0.9.1"
anyhow = "1.0.72"
serde_with = "3.4.0"
thiserror = "2.0"
nonempty = { version = "0.12", features = ["arbitrary"] }
indexmap = { version = "2.12.0", features = ["arbitrary"] }

[features]
cedar-policy = ["dep:cedar-policy"]

[dev.dependencies]
rand = "0.8.5"
