[package]
name = "cedar-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
cedar-policy-validator = { version = "4.4.0", default-features = false }
cedar-policy = { version = "4.4.0", features = ["protobufs"], default-features = false }
cedar-policy-core = { version = "4.4.0", default-features = false }
amzn-cedar-sym-eval = { path = "/workplace/mishiej/CedarSymEval/src/CedarSymEval", features = ["wasm"], default-features = false }
clap = { version = "4.5.36", features = ["derive", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
itertools = "0.14.0"
miette = { version = "7.6.0", default-features = false }
web-sys = { version = "0.3", features = ["console", "HtmlScriptElement", "Window", "Document", "HtmlHeadElement"] }



# Only include prettytable when not targeting wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prettytable-rs = "0.10"

# Patch tokio to use a version without mio for wasm32 target
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.46.1", default-features = false, features = ["sync", "macros"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
