[package]
name = "cedar-afl"
version = "0.1.0"
edition = "2021"

[dependencies]
afl = "0.15.7"
url = "*"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
cedar-drt = { version = "4.0.0", path = "../" }
cedar-policy = { path = "../../cedar/cedar-policy", version = "4.*" }
cedar-policy-core = { path = "../../cedar/cedar-policy-core", version = "4.*", features = ["arbitrary"] }
cedar-policy-validator = { path = "../../cedar/cedar-policy-validator", version = "4.*", features = ["arbitrary"] }
cedar-policy-formatter = { path = "../../cedar/cedar-policy-formatter", version = "4.*" }
cedar-testing = { path = "../../cedar/cedar-testing", version = "4.*" }
cedar-policy-generators = { path = "../../cedar-policy-generators", version = "4.*" }
miette = "7.1.0"
smol_str = { version = "0.2", features = ["serde"] }
regex = "1"
rayon = { version = "1.5", optional = true }
rand = { version = "0.8", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
rand_chacha = { version = "0.3", optional = true }
similar-asserts = "1.5.0"
thiserror = "1.0.61"
arbitrary = "1.3.2"
uuid = "1.8.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "policy_est_to_cedar"
path = "src/fuzz_targets/policy_est_to_cedar.rs"
test = false
doc = false

[[bin]]
name = "validation"
path = "src/fuzz_targets/validation.rs"
test = false
doc = false

[[bin]]
name = "eval"
path = "src/fuzz_targets/eval.rs"
test = false
doc = false

[[bin]]
name = "abac"
path = "src/fuzz_targets/abac.rs"
test = false
doc = false

[[bin]]
name = "raw_policy_est_to_cedar"
path = "src/fuzz_targets/raw_convert_policy_est_to_cedar.rs"
test = false
doc = false
