[package]
name = "cedar-bolero-fuzz"
edition = "2021"
version = "0.0.0"
publish = false

[dependencies]
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
cedar-drt = { version = "4.0.0", path = ".." }
cedar-policy = { path = "../../cedar/cedar-policy", version = "4.*" }
cedar-policy-core = { path = "../../cedar/cedar-policy-core", version = "4.*", features = ["arbitrary"] }
cedar-policy-validator = { path = "../../cedar/cedar-policy-validator", version = "4.*", features = ["arbitrary"] }
cedar-policy-formatter = { path = "../../cedar/cedar-policy-formatter", version = "4.*" }
cedar-testing = { path = "../../cedar/cedar-testing", version = "4.*" }
cedar-policy-generators = { path = "../../cedar-policy-generators", version = "4.*" }
miette = "7.1.0"
smol_str = { version = "0.2", features = ["serde"] }
regex = "1"
rayon = { version = "1.5", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
similar-asserts = "1.5.0"
thiserror = "1.0.61"
bolero = { version = "0.11.1", features = ["arbitrary"] }
bolero-generator = "0.11.0"
arbitrary = "1.3.2"

[dependencies.uuid]
version = "1.3.1"
features = ["v4", "fast-rng"]

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[[test]]
name = "eval_type_directed"
harness = false

[[test]]
name = "convert_policy_json_to_cedar"
harness = false

[[test]]
name = "abac_type_directed"
harness = false

[[test]]
name = "validation_drt_type_directed"
harness = false
