[package]
name = "cedar-drt-inner"
edition = "2021"
version = "4.4.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cedar-drt = { path = "..", version = "4.4.0" }
cedar-lean-ffi = { path = "../../cedar-lean-ffi", version = "4.4.0" }
cedar-policy = { version = "4.4.0", features = ["permissive-validate", "entity-manifest", "tpe"] }
cedar-policy-core = { version = "4.4.0", features = ["arbitrary", "tpe"] }
cedar-policy-formatter = "4.4.0"
cedar-policy-symcc = "*"
cedar-testing = { path = "../../cedar/cedar-testing", version = "4.4.0" }
cedar-policy-generators = { path = "../../cedar-policy-generators", version = "4.0.0", features = ["cedar-policy"] }
clap = { version = "4.0", features = ["derive"], optional = true }
log = "0.4"
logos = "0.15.0"
itertools = "0.14.0"
miette = "7.1.0"
prost = "0.14"
rand = { version = "0.9", features = ["small_rng"] }
rand_chacha = { version = "0.9", optional = true }
rayon = { version = "1.5", optional = true }
regex = "1"
serde = "1.0"
serde_json = "1.0"
similar-asserts = "1.5.0"
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
tokio = { version = "1.0", features = ["full"] } # for symcc targets

[features]
prt = ["dep:rayon", "dep:clap", "dep:rand_chacha"]

[patch.crates-io]
cedar-policy = { path = "../../cedar/cedar-policy" }
cedar-policy-core = { path = "../../cedar/cedar-policy-core" }
cedar-policy-formatter = { path = "../../cedar/cedar-policy-formatter" }
cedar-policy-symcc = { path = "../../cedar/cedar-policy-symcc" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "rbac"
path = "fuzz_targets/rbac.rs"
test = false
doc = false

[[bin]]
name = "rbac-authorizer"
path = "fuzz_targets/rbac-authorizer.rs"
test = false
doc = false

[[bin]]
name = "abac"
path = "fuzz_targets/abac.rs"
test = false
doc = false

[[bin]]
name = "abac-type-directed"
path = "fuzz_targets/abac-type-directed.rs"
test = false
doc = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[[bin]]
name = "policy-set-roundtrip"
path = "fuzz_targets/policy-set-roundtrip.rs"
test = false
doc = false

[[bin]]
name = "formatter"
path = "fuzz_targets/formatter.rs"
test = false
doc = false

[[bin]]
name = "formatter-bytes"
path = "fuzz_targets/formatter-bytes.rs"
test = false
doc = false

[[bin]]
name = "validation-pbt"
path = "fuzz_targets/validation-pbt.rs"
test = false
doc = false

[[bin]]
name = "validation-pbt-type-directed"
path = "fuzz_targets/validation-pbt-type-directed.rs"
test = false
doc = false

[[bin]]
name = "entity-slicing-drt-type-directed"
path = "fuzz_targets/entity-slicing-drt-type-directed.rs"
test = false
doc = false

[[bin]]
name = "validation-drt"
path = "fuzz_targets/validation-drt.rs"
test = false
doc = false

[[bin]]
name = "validation-drt-type-directed"
path = "fuzz_targets/validation-drt-type-directed.rs"
test = false
doc = false

[[bin]]
name = "simple-parser"
path = "fuzz_targets/simple-parser.rs"
test = false
doc = false

[[bin]]
name = "wildcard-matching"
path = "fuzz_targets/wildcard-matching.rs"
test = false
doc = false

[[bin]]
name = "eval-type-directed"
path = "fuzz_targets/eval-type-directed.rs"
test = false
doc = false

[[bin]]
name = "schema-roundtrip"
path = "fuzz_targets/schema-roundtrip.rs"
test = false
doc = false

[[bin]]
name = "json-schema-roundtrip"
path = "fuzz_targets/json-schema-roundtrip.rs"
test = false
doc = false

[[bin]]
name = "common-type-resolution"
path = "fuzz_targets/common-type-resolution.rs"
test = false
doc = false

[[bin]]
name = "convert-schema-json-to-cedar"
path = "fuzz_targets/convert-schema-json-to-cedar.rs"
test = false
doc = false

[[bin]]
name = "convert-schema-cedar-to-json"
path = "fuzz_targets/convert-schema-cedar-to-json.rs"
test = false
doc = false

[[bin]]
name = "convert-policy-cedar-to-json"
path = "fuzz_targets/convert-policy-cedar-to-json.rs"
test = false
doc = false

[[bin]]
name = "convert-policy-json-to-cedar"
path = "fuzz_targets/convert-policy-json-to-cedar.rs"
test = false
doc = false

[[bin]]
name = "protobuf-roundtrip"
path = "fuzz_targets/protobuf-roundtrip.rs"
test = false
doc = false

[[bin]]
name = "entity-validation"
path = "fuzz_targets/entity-validation.rs"
test = false
doc = false

[[bin]]
name = "request-validation"
path = "fuzz_targets/request-validation.rs"
test = false
doc = false

[[bin]]
name = "roundtrip-entities"
path = "fuzz_targets/roundtrip-entities.rs"
test = false
doc = false

[[bin]]
name = "roundtrip-entities-bytes"
path = "fuzz_targets/roundtrip-entities-bytes.rs"
test = false
doc = false

[[bin]]
name = "level-validation-drt"
path = "fuzz_targets/level-validation-drt.rs"
test = false
doc = false

[[bin]]
name = "tpe-pbt"
path = "fuzz_targets/tpe-pbt.rs"
test = false
doc = false

[[bin]]
name = "symcc-term-roundtrip-abac-type-directed"
path = "fuzz_targets/symcc-term-roundtrip-abac-type-directed.rs"
test = false
doc = false

[[bin]]
name = "symcc-term-drt"
path = "fuzz_targets/symcc-term-drt.rs"
test = false
doc = false

[[bin]]
name = "symcc-smt-script-drt"
path = "fuzz_targets/symcc-smt-script-drt.rs"
test = false
doc = false

[[bin]]
name = "symcc-cex-pbt"
path = "fuzz_targets/symcc-cex-pbt.rs"
test = false
doc = false

[[bin]]
name = "batched-evaluation-drt"
path = "fuzz_targets/batched-evaluation-drt.rs"
test = false
doc = false

[[bin]]
name = "batched-evaluation-pbt"
path = "fuzz_targets/batched-evaluation-pbt.rs"
test = false
doc = false
