[package]
name = "generate-protodata"
rust-version = "1.77"
version = "4.1.0"
homepage = "https://cedarpolicy.com"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cedar-policy/cedar-spec"

[dependencies]
cedar-policy-core = { path = "../../../../cedar/cedar-policy-core", version = "*" }
cedar-policy-validator = { path = "../../../../cedar/cedar-policy-validator", version = "*" }
cedar-policy = { path = "../../../../cedar/cedar-policy", version = "*", features = ["protobufs"] }
miette = { version = "7.1.0", features = ["fancy"] }
prost = "0.13"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = "deny"
missing_debug_implementations = "deny"
rust-2018-idioms = "deny"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
needless_doctest_main = "allow"
result_large_err = "allow"
large_enum_variant = "allow"
redundant_clone = "deny"
todo = "deny"
unimplemented = "deny"
